// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CNavbarToggler renders correctly 1`] = `
<button
  class="navbar-toggler"
  type="button"
>
  <span
    class="navbar-toggler-icon"
  />
</button>
`;

exports[`CNavbarToggler renders correctly 2`] = `
<button
  class="navbar-toggler"
  type="submit"
>
  CNavbar items
</button>
`;
